<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenList</string>
    <string name="setup_subtitle">Connect to your OpenList server</string>
    <string name="server_address">Server Address</string>
    <string name="hint_server_url">http://your-server:5244</string>
    <string name="hint_server_name">Server name (optional)</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="connect">Connect</string>
    <string name="login">Login</string>
    <string name="guest_access">Browse as Guest</string>
    <string name="change">Change</string>
    <string name="back">Back</string>
    <string name="empty_folder">This folder is empty</string>
    <string name="error_url_empty">Please enter a server URL</string>
    <string name="error_username_empty">Please enter a username</string>
    <string name="action_download">Download</string>
    <string name="action_share_link">Share link</string>
    <string name="action_copy_link">Copy link</string>
    <string name="share_via">Share via</string>
    <string name="link_copied">Link copied to clipboard</string>
    <string name="download_started">Downloading: %s</string>
    <string name="downloading">Downloading…</string>
    <string name="download_complete">Download complete</string>
    <string name="download_failed">Download failed</string>
    <string name="cancel">Cancel</string>
    <string name="sort_by">Sort by</string>
    <string name="search_hint">Search files…</string>
</resources>
